RESOLVED FIXED118962
DateInputType constructor initiate incorrect base class
https://bugs.webkit.org/show_bug.cgi?id=118962
Summary DateInputType constructor initiate incorrect base class
Santosh Mahto
Reported 2013-07-22 00:44:00 PDT
DateInputType is updated to be derived form BaseChooserOnlyDateAndTimeInputType https://bugs.webkit.org/show_bug.cgi?id=116796 But in constructor definition BaseDateInputType is still used to invoke base class. reference: http://trac.webkit.org/changeset/150876/trunk/Source/WebCore/html/DateInputType.h
Attachments
Patch (1.31 KB, patch)
2013-07-22 00:53 PDT, Santosh Mahto
no flags
Santosh Mahto
Comment 1 2013-07-22 00:53:12 PDT
Gyuyoung Kim
Comment 2 2013-07-22 04:41:29 PDT
Comment on attachment 207228 [details] Patch Looks OK
WebKit Commit Bot
Comment 3 2013-07-22 18:42:07 PDT
Comment on attachment 207228 [details] Patch Clearing flags on attachment: 207228 Committed r153022: <http://trac.webkit.org/changeset/153022>
WebKit Commit Bot
Comment 4 2013-07-22 18:42:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.