DateInputType constructor initiate incorrect base class https://bugs.webkit.org/show_bug.cgi?id=118962

Patch by Santosh Mahto <santosh.ma@samsung.com> on 2013-07-22
Reviewed by Gyuyoung Kim.

No new test required since solving code error

* html/DateInputType.cpp:
(WebCore::DateInputType::DateInputType):
Corrected the base class instantiation in constructor.

Canonical link: https://commits.webkit.org/136828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153022 268f45cc-cd09-0410-ab3c-d52691b4dbfc