Source/WebCore/html/DateInputType.cpp
@@ -47,7 +47,7 @@ static const int dateDefaultStepBase = 0;
 static const int dateStepScaleFactor = 86400000;
 
 inline DateInputType::DateInputType(HTMLInputElement* element)
-    : BaseDateInputType(element)
+    : BaseChooserOnlyDateAndTimeInputType(element)
 {
 }
 
